test_regress/t/t_source_sync.out
%Error: t/t_source_sync.v:20:14: syntax error, unexpected /*verilator clocker*/, expecting ',' or ';'
   20 |    logic clk /*verilator clocker*/ ;
      |              ^~~~~~~~~~~~~~~~~~~~~
%Error: t/t_source_sync.v:22:1: syntax error, unexpected '}'
   22 | } ss_s;
      | ^
%Error: Exiting due to
